compiler/toc_hir_lowering/tests/snapshots/lowering__lower_if_stmt-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    if true then\n        var a := 1\n    else\n        var a := 2\n    end if\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..80): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..75): []
        If@(FileId(1), 5..75)
          Literal@(FileId(1), 8..12): Boolean(true)
          Block@(FileId(1), 26..36): Normal
            StmtItem@(FileId(1), 26..36): ItemId(0)
              ConstVar@(FileId(1), 26..36): var "a"@(FileId(1), 30..31)
                ExprBody@(FileId(1), 35..36)
                  Literal@(FileId(1), 35..36): Integer(1)
          Block@(FileId(1), 54..64): Normal
            StmtItem@(FileId(1), 54..64): ItemId(1)
              ConstVar@(FileId(1), 54..64): var "a"@(FileId(1), 58..59)
                ExprBody@(FileId(1), 63..64)
                  Literal@(FileId(1), 63..64): Integer(2)

