compiler/toc_hir_lowering/tests/snapshots/lowering__lower_if_stmt-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: if then end if

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        If@(FileId(1), 0..14)
          Block@(FileId(1), 8..8): Normal
error in file FileId(1) at 3..7: unexpected token
| error in file FileId(1) for 3..7: expected expression, but found ‘then’

